--- a/assets/style.css
+++ b/assets/style.css
@@ -70,6 +70,14 @@ body{
     color: white;
     
 }
+.start{
+    background-color: #c6ff9d;
+    color: black;
+}
+.start:hover{
+    background-color: black;
+    color: #c6ff9d;
+}
 p{
     margin-bottom: 40px;
 }
@@ -78,7 +86,7 @@ p{
     margin-left: 20px;
 
 }
-.start:hover,.how:hover{
+.how:hover{
     color: black;
     background-color: #e6f6c5;
     
@@ -117,12 +125,18 @@ p{
     border: 1px solid white;
     padding: 10px 20px;
     border-radius: 80px;
+    background-color: #c6ff9d;
+    color: black;
  
 
 }
-.b7:hover,.b6:hover{
+.b6:hover{
     color: black;
     background-color: #e6f6c5;
+}
+.b7:hover{
+    color: #c6ff9d;
+    background-color: black;
 }
 .f3{
     position: relative;
@@ -462,4 +476,25 @@ body > div.bottom > div.content-left > div > h2.f.fs > b{
     top: 5px;
     left: 20px;
     
+}
+
+
+.how,.start{
+    position: relative;
+    top: -30px;
+}
+
+.plant{
+    position: relative;
+    top: -10px;
+    left: 100px;
+    height: 50px;
+
+}
+.people{
+    width: 110px;
+    height: 60px;
+    position: relative;
+    left: 300px;
+    top: 25px;
 }
